--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ backcall==0.2.0
 bcrypt==4.2.0
 beautifulsoup4==4.12.3
 bleach==6.1.0
+CacheControl==0.14.0
+cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.3.2
@@ -26,11 +28,25 @@ Faker==30.0.0
 fastapi==0.115.0
 fastapi-cli==0.0.5
 fastjsonschema==2.20.0
+firebase-admin==6.5.0
 frozenlist==1.4.1
+google-api-core==2.20.0
+google-api-python-client==2.147.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
+google-cloud-storage==2.18.2
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
 greenlet==3.1.1
+grpcio==1.66.2
+grpcio-status==1.66.2
 h11==0.14.0
 hashids==1.3.1
 httpcore==1.0.5
+httplib2==0.22.0
 httptools==0.6.1
 httpx==0.27.2
 idna==3.10
@@ -50,6 +66,7 @@ MarkupSafe==2.1.5
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.0.2
+msgpack==1.1.0
 multidict==6.1.0
 nbclient==0.10.0
 nbconvert==7.16.4
@@ -64,8 +81,12 @@ pillow==10.4.0
 platformdirs==4.3.6
 pluggy==1.5.0
 prompt_toolkit==3.0.48
+proto-plus==1.24.0
+protobuf==5.28.2
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.9.2
 pydantic-settings==2.5.2
@@ -75,6 +96,7 @@ PyJWT==2.9.0
 PyMuPDF==1.24.10
 PyMuPDFb==1.24.10
 PyMySQL==1.1.1
+pyparsing==3.1.4
 pytest==8.3.3
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
@@ -82,10 +104,12 @@ python-dotenv==1.0.1
 python-multipart==0.0.10
 PyYAML==6.0.2
 pyzmq==26.2.0
+qrcode==8.0
 referencing==0.35.1
 requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
+rsa==4.9
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -99,6 +123,7 @@ traitlets==5.14.3
 typer==0.12.5
 types-passlib==1.7.7.20240819
 typing_extensions==4.12.2
+uritemplate==4.1.1
 urllib3==2.2.3
 uvicorn==0.30.6
 uvloop==0.20.0
