--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ __pycache__/
 
 # C extensions
 *.so
+*.bak
+service_account_key.json.bak
 service_account_key.json
 # Distribution / packaging
 .Python
